--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: blueviolet;
+  background-image: url("img/space.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 code {
@@ -13,23 +15,159 @@ code {
     "Courier New", monospace;
 }
 
+h1 {
+  display: inline-block;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.outer-container {
+  width: auto;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .shoppinglist {
   background-color: rgba(255, 255, 255, 0.8);
   display: inline-block;
   width: 400px;
   margin: auto;
+  padding: 20px;
+  border-radius: 20px;
 }
 
-.item-box {
+.list-box {
   display: flex;
   flex-direction: column;
+  max-height: 208px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.list-box::-webkit-scrollbar {
+  width: 20px;
+}
+
+.list-box::-webkit-scrollbar-track {
+  background-color: whitesmoke;
+  border-radius: 10px;
+}
+
+.list-box::-webkit-scrollbar-thumb {
+  background-color: blueviolet;
+  border-radius: 10px;
 }
 
 .list-item {
   order: 0;
+  border: 2px solid white;
+  padding: 5px 10px;
+  margin: 3px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .bought {
-  background-color: blue;
+  border-color: gray;
+  color: gray;
   order: 1;
+}
+
+.item-label {
+  width: 100%;
+  text-align: left;
+}
+
+.item-button {
+  border: none;
+  background: none;
+}
+
+.add-button {
+  background-color: blueviolet;
+  border: none;
+  color: white;
+}
+
+.plus {
+  margin-left: 10px;
+}
+
+.button-label {
+  font-size: medium;
+}
+
+/* Custom Checkmark */
+
+/* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: -7px;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: gray;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
